<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="285dp"
        android:layout_height="0dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="63dp"
        android:text="@string/title_text"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:background="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/appLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_marginBottom="67dp"
        android:importantForAccessibility="no"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/usernameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="53dp"
        android:ems="10"
        android:hint="@string/username_text"
        android:importantForAutofill="no"
        android:inputType="text"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="49dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="205dp"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"
        android:text="@string/login_text"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/noAccountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <TextView
        android:id="@+id/noAccountText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="86dp"
        android:layout_marginBottom="185dp"
        android:text="@string/no_account_text"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/createAccountButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="97dp"
        android:text="@string/create_account_text"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/noAccountText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/noAccountText"
        app:layout_constraintTop_toTopOf="@+id/noAccountText" />

</androidx.constraintlayout.widget.ConstraintLayout>